--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,83 @@
-numpy==1.19.5
+absl-py==1.0.0
+accumulation-tree==0.6.2
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+beautifulsoup4==4.11.1
+bleach==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 colorama==0.4.3
-seaborn==0.11.1
-pandas==1.1.5
-statsmodels==0.11.0
-imbalanced_learn==0.3.1
-xgboost==1.3.3
-pyarrow==3.0.0
-matplotlib==3.3.4
-dataframe_image==0.1.1
+cvxpy==1.2.0
+cycler==0.11.0
+dataframe-image==0.1.1
+defusedxml==0.7.1
+dill==0.3.4
+docx-mailmerge==0.5.0
+docxcompose==1.3.4
 docxtpl==0.12.0
+ecos==2.0.10
+entrypoints==0.4
+fastjsonschema==2.15.3
+frozenlist==1.3.0
+idna==3.3
+imbalanced-learn==0.9.0
 imblearn==0.0
-doxc-mailmerge==2.2.0
+importlib-resources==5.7.0
+Jinja2==3.1.1
+joblib==1.1.0
+jsonschema==4.4.0
+jupyter-client==7.2.2
+jupyter-core==4.9.2
+jupyterlab-pygments==0.2.2
+kiwisolver==1.4.2
+lxml==4.8.0
+MarkupSafe==2.1.1
+matplotlib==3.3.4
+mistune==0.8.4
+multidict==6.0.2
+nbclient==0.6.0
+nbconvert==6.5.0
+nbformat==5.3.0
+nest-asyncio==1.5.5
+numpy==1.19.5
 optbinning==0.12.0
-scikit_learn==0.24.2
+ortools==9.3.10497
+osqp==0.6.2.post5
+packaging==21.3
+pandas==1.1.5
+pandocfilters==1.5.0
+patsy==0.5.2
+Pillow==9.1.0
+protobuf==3.20.0
+pyarrow==3.0.0
+Pygments==2.11.2
+Pympler==1.0.1
+pyparsing==3.0.8
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+pytz==2022.1
+pyudorandom==1.0.0
+pyzmq==22.3.0
+qdldl==0.1.5.post2
+requests==2.27.1
+ropwr==0.2.0
+scikit-learn==1.0.2
+scipy==1.8.0
+scs==3.2.0
+seaborn==0.11.1
+six==1.16.0
+soupsieve==2.3.2.post1
+statsmodels==0.13.2
+tdigest==0.5.2.2
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+tornado==6.1
+traitlets==5.1.1
+urllib3==1.26.9
+webencodings==0.5.1
+xgboost==1.3.3
+yarl==1.7.2
+zipp==3.8.0
