--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-pandas>=1.1.5
-pyarrow>=3.0.0
-colorama>=0.4.3
-scikit-learn>=1.0.2
-setuptools>=61.2.0
-xgboost>=1.3.3
-statsmodels>=0.13.2
-matplotlib>=3.3.4
-numpy>=1.19.5
-seaborn>=0.11.1
-docxtpl>=0.12.0
-docx-mailmerge>=0.5.0
-optbinning>=0.12.0
-imblearn>=0.0
-scipy~=1.8.0
-stockstats~=0.4.1
-psutil~=5.9.1
-requests~=2.27.1
+numpy==1.19.5
+pandas==1.1.5
+scikit-learn==1.0.2
+pyarrow==3.0.0
+xgboost==1.3.3
+statsmodels==0.13.2
+optbinning==0.12.0
+colorama==0.4.3
+scipy==1.8.0
+imblearn==0.0
+matplotlib==3.3.4
+seaborn==0.11.1
+docxtpl==0.12.0
+docx-mailmerge==0.5.0
+requests==2.27.1
+stockstats==0.4.1
+psutil==5.9.1
+notify_run==0.0.15
