--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,117 @@
-numpy==1.19.5
-pandas==1.1.5
-scikit-learn==1.0.2
-pyarrow==3.0.0
-xgboost==1.3.3
-statsmodels==0.13.2
-optbinning==0.12.0
+absl-py==1.0.0
+accumulation-tree==0.6.2
+aiohttp==3.8.1
+aiosignal==1.2.0
+altair==4.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+bleach==5.0.0
+blinker==1.5
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
+click==8.1.3
 colorama==0.4.3
-scipy==1.8.0
-imblearn==0.0
-matplotlib==3.3.4
-seaborn==0.11.1
-docxtpl==0.12.0
+commonmark==0.9.1
+cvxpy==1.2.0
+cycler==0.11.0
+Cython==0.29.28
+dataframe-image==0.1.1
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.4
 docx-mailmerge==0.5.0
+docxcompose==1.3.4
+docxtpl==0.12.0
+ecos==2.0.10
+entrypoints==0.4
+fastjsonschema==2.15.3
+filprofiler==2022.7.1
+frozenlist==1.3.0
+gitdb==4.0.9
+GitPython==3.1.29
+gizmo==3.8
+idna==3.3
+imbalanced-learn==0.9.0
+imblearn==0.0
+importlib-metadata==5.0.0
+importlib-resources==5.7.0
+investpy==1.0.8
+Jinja2==3.1.1
+joblib==1.1.0
+jsonschema==4.4.0
+jupyter-client==7.2.2
+jupyter-core==4.9.2
+jupyterlab-pygments==0.2.2
+kiwisolver==1.4.2
+lxml==4.8.0
+MarkupSafe==2.1.1
+matplotlib==3.3.4
+mistune==0.8.4
+multidict==6.0.2
+nbclient==0.6.0
+nbconvert==6.5.0
+nbformat==5.3.0
+nest-asyncio==1.5.5
+notify-run==0.0.15
+numpy==1.23.4
+optbinning==0.12.0
+ortools==9.3.10497
+osqp==0.6.2.post5
+packaging==21.3
+pandas==1.1.5
+pandocfilters==1.5.0
+patsy==0.5.2
+Pillow==9.1.0
+pmdarima==1.8.5
+protobuf==3.20.0
+psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1653089172347/work
+pyarrow==9.0.0
+pydeck==0.8.0b4
+Pygments==2.11.2
+Pympler==1.0.1
+pyparsing==3.0.8
+PyQRCode==1.2.1
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pyudorandom==1.0.0
+pyzmq==22.3.0
+qdldl==0.1.5.post2
 requests==2.28.1
+rich==12.6.0
+ropwr==0.2.0
+scikit-learn==1.0.2
+scipy==1.8.0
+scs==3.2.0
+seaborn==0.11.1
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.3.2.post1
+statsmodels==0.13.2
 stockstats==0.4.1
-psutil==5.9.1
-notify_run==0.0.15
+streamlit==1.13.0
+tdigest==0.5.2.2
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
+tinycss2==1.1.1
+toml==0.10.2
+toolz==0.12.0
+tornado==6.1
+traitlets==5.1.1
+trendet==0.7
+typing_extensions==4.4.0
+tzdata==2022.5
+tzlocal==4.2
+Unidecode==1.3.6
+urllib3==1.26.9
+validators==0.20.0
+watchdog==2.1.9
+webencodings==0.5.1
+xgboost==1.3.3
+yarl==1.7.2
+zipp==3.8.0
