--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy==1.19.5
+numpy==1.23.4
 pandas==1.1.5
 scikit-learn==1.0.2
-pyarrow==3.0.0
+pyarrow==9.0.0
 xgboost==1.3.3
 statsmodels==0.13.2
-optbinning==0.12.0
+optbinning
 colorama==0.4.3
 scipy==1.8.0
 imblearn==0.0
@@ -16,3 +16,5 @@ requests==2.28.1
 stockstats==0.4.1
 psutil==5.9.1
 notify_run
+streamlit
+matplotlib
