--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,155 @@
-numpy==1.23.4
-pandas==1.1.5
-scikit-learn==1.0.2
-pyarrow==9.0.0
-xgboost==1.3.3
-statsmodels==0.13.2
-optbinning
+absl-py==1.3.0
+aenum==2.2.6
+altair==4.2.0
+anyio==3.6.2
+APScheduler==3.9.1.post1
+asttokens==2.1.0
+async-generator==1.10
+attrs==22.1.0
+Babel==2.11.0
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+blinker==1.5
+bs4==0.0.1
+cachetools==5.2.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
 colorama==0.4.3
-scipy==1.8.0
-imblearn==0.0
-matplotlib==3.3.4
-seaborn==0.11.1
-docxtpl==0.12.0
+commonmark==0.9.1
+cvxpy==1.2.2
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
 docx-mailmerge==0.5.0
-requests==2.28.1
-stockstats==0.4.1
+docxcompose==1.3.7
+docxtpl==0.12.0
+ecos==2.0.10
+entrypoints==0.4
+exceptiongroup==1.0.4
+executing==1.2.0
+fbchat==1.9.7
+Flask==2.2.2
+Flask-Cors==3.0.10
+gitdb==4.0.9
+GitPython==3.1.29
+h11==0.14.0
+htmlmin==0.1.12
+httpcore==0.16.2
+httpx==0.23.1
+httpx-oauth==0.10.2
+idna==3.4
+ImageHash==4.3.1
+imbalanced-learn==0.9.0
+imblearn==0.0
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+ipykernel==6.17.1
+ipython==8.6.0
+ipywidgets==8.0.2
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.0
+jupyter_client==7.4.7
+jupyter_core==5.0.0
+jupyterlab-widgets==3.0.3
+kiwisolver==1.4.4
+lxml==4.9.1
+MarkupSafe==2.1.1
+matplotlib==3.3.4
+matplotlib-inline==0.1.6
+multimethod==1.9
+nest-asyncio==1.5.6
+networkx==2.8.8
+notify-run==0.0.15
+numpy==1.23.4
+optbinning==0.17.1
+ortools==9.4.1874
+osqp==0.6.2.post5
+outcome==1.2.0
+packaging==21.3
+paho-mqtt==1.6.1
+pandas==1.1.5
+pandas-profiling==3.5.0
+parso==0.8.3
+patsy==0.5.3
+pexpect==4.8.0
+phik==0.12.2
+pickleshare==0.7.5
+Pillow==9.3.0
+pip==22.2.2
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.4
+prompt-toolkit==3.0.33
+protobuf==3.20.3
 psutil==5.9.1
-notify_run
-streamlit
-matplotlib
-sweetviz
-flask
-flask_cors
-pyodbc
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==9.0.0
+pydantic==1.10.2
+pydeck==0.8.0
+Pygments==2.13.0
+Pympler==1.0.1
+pyparsing==3.0.9
+PyQRCode==1.2.1
+pyrsistent==0.19.2
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==0.21.0
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+PyYAML==6.0
+pyzmq==24.0.1
+qdldl==0.1.5.post2
+requests==2.28.1
+rfc3986==1.5.0
+rich==12.6.0
+ropwr==0.4.0
+scikit-learn==1.0.2
+scipy==1.8.0
+scs==3.2.2
+seaborn==0.11.1
+selenium==4.7.2
+semver==2.13.0
+setuptools==65.5.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+stack-data==0.6.1
+statsmodels==0.13.2
+stockstats==0.4.1
+streamlit==1.15.1
+streamlit-autorefresh==0.0.1
+streamlit-pandas-profiling==0.1.3
+sweetviz==2.1.4
+tangled-up-in-unicode==0.2.0
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.5.0
+trio==0.22.0
+trio-websocket==0.9.2
+typeguard==2.13.3
+typing_extensions==4.4.0
+tzdata==2022.6
+tzlocal==4.2
+urllib3==1.26.12
+validators==0.20.0
+visions==0.7.5
+watchdog==2.1.9
+wcwidth==0.2.5
+Werkzeug==2.2.2
+wheel==0.37.1
+widgetsnbextension==4.0.3
+wsproto==1.2.0
+xgboost==1.3.3
+zipp==3.10.0
