--- a/requirements.txt
+++ b/requirements.txt
@@ -87,6 +87,7 @@ prompt-toolkit==3.0.33
 protobuf==3.20.3
 psutil==5.9.1
 ptyprocess==0.7.0
+ppscore==1.3.0
 pure-eval==0.2.2
 pyarrow==12.0.0
 pydantic==1.10.2
