--- a/requirements.txt
+++ b/requirements.txt
@@ -53,8 +53,8 @@ jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.0
-jupyter_client-8.3.0 
-jupyter_core-5.3.1
+jupyter_client==7.4.7
+jupyter_core==5.0.0
 jupyterlab-widgets==3.0.3
 kiwisolver==1.4.4
 lxml==4.9.1
@@ -87,9 +87,8 @@ prompt-toolkit==3.0.33
 protobuf==3.20.3
 psutil==5.9.1
 ptyprocess==0.7.0
-ppscore==1.3.0
 pure-eval==0.2.2
-pyarrow==12.0.0
+pyarrow==9.0.0
 pydantic==1.10.2
 pydeck==0.8.0
 Pygments==2.13.0
@@ -152,6 +151,5 @@ Werkzeug==2.2.2
 wheel==0.37.1
 widgetsnbextension==4.0.3
 wsproto==1.2.0
-xgboost==1.7.6
+xgboost==1.3.3
 zipp==3.10.0
-scikit-plot
