--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ scikit-learn==0.24.2
 matplotlib==3.4.3
 psutil==5.8.0
 pyarrow==6.0.1
-xgboost==1.3.3
+xgboost==1.6.2
 mlflow==1.23.1
 ppscore==1.2.0
 optbinning==0.17.0
-gradio==2.8
+gradio==4.44
 imbalanced-learn==0.8.1
 scipy==1.7.3
 colorama==0.4.4
-
+sweetviz==2.3.1
